k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scrapzee-ingress
  namespace: scrapzee
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: scrapzee.local
    http:
      paths:

      # FRONTEND
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80

      # AUTH
      - path: /api/auth/?(.*)
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 80

      # PRICING
      - path: /api/pricing/?(.*)
        pathType: Prefix
        backend:
          service:
            name: pricing-service
            port:
              number: 80

      # USERS
      - path: /api/users/?(.*)
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 80
